--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "fibers": "5.0.1",
+    "firebase": "^9.6.7",
     "next": "12.1.0",
     "node-sass": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.2",
     "sass": "1.49.8"
   },
   "devDependencies": {
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
